objects/Billing_Conversion_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Average_Conversion_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? To store average conversion rates for previous month
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>Average Conversion Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>What it Does? To store period start date for average conversion rate
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>From Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Currency_Code__c</fullName>
        <label>To Currency Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>What it Does? To store period end date for average conversion rate
Downstream Impact? N/A
Which department is owner? Sales Ops/IT</description>
        <label>To Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Billing Conversion Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>To_Currency_Code__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Average_Conversion_Rate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>To_Currency_Code__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>startsWith</operation>
            <value>AUD</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>To_Currency_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Currencies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>December_2017</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>To_Currency_Code__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Average_Conversion_Rate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>To_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/1/2017</value>
        </filters>
        <filters>
            <field>To_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2018</value>
        </filters>
        <label>December_2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>November_2017</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>To_Currency_Code__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Average_Conversion_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/30/2017</value>
        </filters>
        <filters>
            <field>To_Date__c</field>
            <operation>lessThan</operation>
            <value>11/30/2017</value>
        </filters>
        <label>November_2017</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>To_Date_2_28_2018</fullName>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>To_Currency_Code__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Average_Conversion_Rate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>To_Date__c</field>
            <operation>equals</operation>
            <value>2/28/2018</value>
        </filters>
        <label>To Date 2/28/2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_October</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>To_Currency_Code__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2017</value>
        </filters>
        <filters>
            <field>From_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>10/31/2017</value>
        </filters>
        <label>2017 October</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BCR-{00000000}</displayFormat>
        <label>Billing Conversion Rate #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>